added GetHasteRate method, made GiveUpSeconds a metric
without haste rate, it's impossible to display an accurate BPM. Give up
time should be controllable.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3313,6 +3313,7 @@ PlayerType="Player"
 PlayerInitCommand=y,SCREEN_CENTER_Y;zoom,(THEME:GetMetric("Common","ScreenHeight")/480)
 StartGivesUp=true
 BackGivesUp=false
+GiveUpSeconds=2.5
 # rage
 AllowCenter1Player=true
 #
