fix SongOptions fail type to not change fail type preference
per issue #80. Problem came from commit
231ae7cb32814b662d9b66112afd9ec76c796b78 - May 27, 2011

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3122,7 +3122,7 @@ LineNames="1,2,3,4,5,6,7,8,9,10"
 Line1="list,LifeType"
 Line2="list,BarDrain"
 Line3="list,BatLives"
-Line4="lua,GamePrefDefaultFail()"
+##Line4="lua,GamePrefDefaultFail()"
 Line5="list,Assist"
 Line6="list,Rate"
 Line7="list,SoundEffect"
@@ -3130,7 +3130,7 @@ Line8="list,AutoAdjust"
 Line9="list,Background"
 Line10="list,SaveScores"
 Line11="list,SaveReplays"
-## Line4="list,Fail"
+Line4="list,Fail"
 
 [ScreenSplash]
 Class="ScreenSplash"
