Attempted fix of Tick Holds
NoteDataUtil::GetTotalHoldTicks() was not counting the last tick of
holds which ended on the last row of the song. Extended the range to
include the last row.

NoteDataUtil::GetTotalHoldTicks() was counting number of rows held, when
it should only count 1 regardless of number( at least to mimic pump )

Player::CrossedRows() was assuming a constant tick rate over the crossed
rows, leading to potentially inaccurate tick counts.

Pump holds were counting "HoldNote_Held" due to capitalization in the
metrics. Fixed metrics and made "IsGame" function case insensitive.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -642,8 +642,8 @@ LifePercentChangeW4=0.000
 LifePercentChangeW5=-0.040
 LifePercentChangeMiss=-0.080
 LifePercentChangeHitMine=-0.160
-LifePercentChangeHeld=IsGame("Pump") and 0.000 or 0.008
-LifePercentChangeLetGo=IsGame("Pump") and 0.000 or -0.080
+LifePercentChangeHeld=IsGame("pump") and 0.000 or 0.008
+LifePercentChangeLetGo=IsGame("pump") and 0.000 or -0.080
 LifePercentChangeMissedHold=0.000
 LifePercentChangeCheckpointMiss=-0.080
 LifePercentChangeCheckpointHit=0.008
@@ -1337,7 +1337,7 @@ FrameOverP2OffCommand=
 [ScoreKeeperNormal]
 PercentScoreWeightCheckpointHit=3
 PercentScoreWeightCheckpointMiss=0
-PercentScoreWeightHeld=IsGame("Pump") and 0 or 3
+PercentScoreWeightHeld=IsGame("pump") and 0 or 3
 PercentScoreWeightHitMine=-2
 PercentScoreWeightMissedHold=0
 PercentScoreWeightLetGo=0
@@ -1349,7 +1349,7 @@ PercentScoreWeightW4=0
 PercentScoreWeightW5=0
 GradeWeightCheckpointHit=2
 GradeWeightCheckpointMiss=-8
-GradeWeightHeld=IsGame("Pump") and 0 or 6
+GradeWeightHeld=IsGame("pump") and 0 or 6
 GradeWeightHitMine=-8
 GradeWeightMissedHold=0
 GradeWeightLetGo=0
