--- a/src/StepMania-net2011.vcxproj
+++ b/src/StepMania-net2011.vcxproj
@@ -774,6 +774,7 @@ cl /Zl /nologo /c verstub.cpp /Fo"$(IntDir)"</Command>
     <ClCompile Include="ActorFrame.cpp" />
     <ClCompile Include="ActorFrameTexture.cpp" />
     <ClCompile Include="ActorMultiTexture.cpp" />
+    <ClCompile Include="ActorMultiVertex.cpp" />
     <ClCompile Include="ActorProxy.cpp" />
     <ClCompile Include="ActorScroller.cpp" />
     <ClCompile Include="ActorSound.cpp" />
@@ -1655,6 +1656,7 @@ cl /Zl /nologo /c verstub.cpp /Fo"$(IntDir)"</Command>
     <ClInclude Include="ActorFrame.h" />
     <ClInclude Include="ActorFrameTexture.h" />
     <ClInclude Include="ActorMultiTexture.h" />
+    <ClInclude Include="ActorMultiVertex.h" />
     <ClInclude Include="ActorProxy.h" />
     <ClInclude Include="ActorScroller.h" />
     <ClInclude Include="ActorSound.h" />
