--- a/src/StepMania-net2013.vcxproj.filters
+++ b/src/StepMania-net2013.vcxproj.filters
@@ -1251,6 +1251,9 @@
     <ClCompile Include="ActorMultiTexture.cpp">
       <Filter>Actors</Filter>
     </ClCompile>
+    <ClCompile Include="ActorMultiVertex.cpp">
+      <Filter>Actors</Filter>
+    </ClCompile>
     <ClCompile Include="ActorProxy.cpp">
       <Filter>Actors</Filter>
     </ClCompile>
@@ -2781,6 +2784,9 @@
       <Filter>Actors</Filter>
     </ClInclude>
     <ClInclude Include="ActorMultiTexture.h">
+      <Filter>Actors</Filter>
+    </ClInclude>
+    <ClInclude Include="ActorMultiVertex.h">
       <Filter>Actors</Filter>
     </ClInclude>
     <ClInclude Include="ActorProxy.h">
