Added AMV to src/Makefile.am

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -555,6 +555,7 @@ Actors = \
 Actor.cpp Actor.h ActorFrame.cpp ActorFrame.h \
 ActorFrameTexture.cpp ActorFrameTexture.h \
 ActorMultiTexture.cpp ActorMultiTexture.h \
+ActorMultiVertex.cpp ActorMultiVertex.h \
 ActorProxy.cpp ActorProxy.h \
 ActorScroller.cpp ActorScroller.h ActorUtil.cpp ActorUtil.h \
 ActorSound.cpp ActorSound.h \
