Added ArbSpeedMods function for a better way of setting speed modifiers.  Added NotifyHandlerOfSelection to OptionRowHandler to support this.  Changed exceptions thrown by OptionRowHandlerLua into log warnings because crashing out is not helpful to themers.  Fixed SetEnabledForPlayers in OptionRowHandlerLua to correctly read the PlayerNumber enum.  Removed silly git add Docs/Themerdocs/Examples/OptionRowHandlerLua.lua  and second check for ExportOnChange.

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -2011,7 +2011,7 @@ SmallBanner6OffCommand=
 
 [ScreenEditOptions]
 LineNames="1,2,3,4,5,6,R1,R2,7,8,9,10,Attacks,11,12,13,14,15,16,SF"
-Line1="lua,SpeedMods()"
+Line1="lua,ArbSpeedMods()"
 LineSF="lua,OptionRowScreenFilter()"
 
 [StepsDisplayEdit]
