--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3076,7 +3076,7 @@ PlayMusic=false
 TimerSeconds=30
 #
 LineNames="1,2,3A,3B,4,5,6,R1,R2,7,8,9,10,11,12,13,14,16,17"
-Line1="lua,SpeedMods()"
+Line1="lua,ArbSpeedMods()"
 # Line1="list,Speed"
 Line2="list,Accel"
 Line3A="list,EffectsReceptor"
