Fixed bug that caused global fail setting to override setting the fail type from song options.  Added GAMESTATE:SetFailTypeExplicitlySet so that a theme with a custom song options screen can protect its fail setting from being overridden the same way the engine ScreenSongOptions does.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1809,6 +1809,7 @@ Fallback="ScreenSelectMaster"
 PrevScreen="ScreenInit"
 NextScreen="ScreenInit"
 #
+ScreenBeginCommand=%ResetDefaultFail
 StopMusicOnBack=true
 #
 CoinModeChangeScreen=Branch.TitleMenu()
@@ -2222,7 +2223,7 @@ TimerMetricsGroup="MenuTimerNoSound"
 WaitForChildrenBeforeTweeningOut=true
 TimerSeconds=1
 #
-ScreenBeginCommand=%SetFail
+ScreenBeginCommand=
 
 [ScreenOptions]
 Fallback="ScreenWithMenuElements"
@@ -3130,7 +3131,7 @@ Line8="list,AutoAdjust"
 Line9="list,Background"
 Line10="list,SaveScores"
 Line11="list,SaveReplays"
-Line4="list,Fail"
+Line4="lua,SongPrefFail()"
 
 [ScreenSplash]
 Class="ScreenSplash"
