Renamed ArbSpeedMods to ArbitrarySpeedMods to avoid the wrath of the OpenGL Architecture Review Board.  Added option rows for controlling the size of the increments used by ArbitrarySpeedMods.  Simplified logic in ASM and added rounding to avoid excessive precision.  Removed pointless setmetatable calls from various lua option rows.

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1327,7 +1327,7 @@ LineFlashyCombo="lua,ThemePrefRow('FlashyCombo')"
 [ScreenOptionsGraphicsSound]
 
 [ScreenOptionsAdvanced]
-LineNames="3,4,8,11,13,14,16,28,29,30,RollCombo"
+LineNames="3,4,8,SI,SM,11,13,14,16,28,29,30,RollCombo"
 LineRollCombo="lua,ThemePrefRow('ComboOnRolls')"
 
 [ScreenAppearanceOptions]
