--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2941,11 +2941,13 @@ Line20="conf,VisualDelaySeconds"
 Fallback="ScreenOptionsServiceChild"
 NextScreen="ScreenOptionsService"
 PrevScreen="ScreenOptionsService"
-LineNames="3,4,8,11,13,14,15,16,28,29,30,31"
+LineNames="3,4,8,SI,SM,11,13,14,15,16,28,29,30,31"
 #LineScore="lua,UserPrefScoringMode()"
 Line3="conf,TimingWindowScale"
 Line4="conf,LifeDifficulty"
 Line8="lua,GamePrefDefaultFail()"
+LineSI="lua,SpeedModIncSize()"
+LineSM="lua,SpeedModIncMultiple()"
 Line11="conf,AllowW1"
 Line13="conf,HiddenSongs"
 Line14="conf,EasterEggs"
@@ -3076,7 +3078,7 @@ PlayMusic=false
 TimerSeconds=30
 #
 LineNames="1,2,3A,3B,4,5,6,R1,R2,7,8,9,10,11,12,13,14,16,17"
-Line1="lua,ArbSpeedMods()"
+Line1="lua,ArbitrarySpeedMods()"
 # Line1="list,Speed"
 Line2="list,Accel"
 Line3A="list,EffectsReceptor"
