add missing ActorMultiVertex to VS2008 project file

--- a/src/StepMania-net2008.vcproj
+++ b/src/StepMania-net2008.vcproj
@@ -3829,6 +3829,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\ActorMultiVertex.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\ActorMultiVertex.h"
+				>
+			</File>
+			<File
 				RelativePath="ActorProxy.cpp"
 				>
 			</File>
