Fixed invalid LineNames in ScreenOptionsExtended in _fallback metrics.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2741,7 +2741,7 @@ Fallback="ScreenOptionsService"
 NextScreen="ScreenOptionsService"
 PrevScreen="ScreenOptionsService"
 #
-LineNames="2,Sync,3,10,11,4,12,5"
+LineNames="TestInput,Sync,Appearance,UI,Input,GraphicSound,Arcade,Advanced"
 
 [ScreenOptionsServiceChild]
 Fallback="ScreenOptionsMaster"
