add pkgingo's (Win32) Minimaid driver. * new makefile config option "HAVE_MINIMAID" * update all Visual Studio projects

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -400,6 +400,10 @@ if WINDOWS
 if HAVE_PARALLEL_PORT
   Lights += arch/Lights/LightsDriver_Win32Parallel.cpp arch/Lights/LightsDriver_Win32Parallel.h
 endif
+
+if HAVE_MINIMAID
+  Lights += arch/Lights/LightsDriver_Win32Minimaid.cpp arch/Lights/LightsDriver_Win32Minimaid.h
+endif
  
 if !HAVE_PTHREAD
   Threads += arch/Threads/Threads_Win32.cpp arch/Threads/Threads_Win32.h
