--- a/src/StepMania-net2010.vcxproj
+++ b/src/StepMania-net2010.vcxproj
@@ -580,6 +580,7 @@ cl /Zl /nologo /c verstub.cpp /Fo$(IntDir)</Command>
     <ClCompile Include="arch\Lights\LightsDriver.cpp" />
     <ClCompile Include="arch\Lights\LightsDriver_Export.cpp" />
     <ClCompile Include="arch\Lights\LightsDriver_SystemMessage.cpp" />
+    <ClCompile Include="arch\Lights\LightsDriver_Win32Minimaid.cpp" />
     <ClCompile Include="arch\Lights\LightsDriver_Win32Parallel.cpp" />
     <ClCompile Include="archutils\Win32\AppInstance.cpp" />
     <ClCompile Include="archutils\Win32\arch_setup.cpp" />
@@ -1898,6 +1899,7 @@ cl /Zl /nologo /c verstub.cpp /Fo$(IntDir)</Command>
     <ClInclude Include="arch\Lights\LightsDriver.h" />
     <ClInclude Include="arch\Lights\LightsDriver_Export.h" />
     <ClInclude Include="arch\Lights\LightsDriver_SystemMessage.h" />
+    <ClInclude Include="arch\Lights\LightsDriver_Win32Minimaid.h" />
     <ClInclude Include="arch\Lights\LightsDriver_Win32Parallel.h" />
     <ClInclude Include="archutils\Win32\AppInstance.h" />
     <ClInclude Include="archutils\Win32\arch_setup.h" />
