Moved error reporting to ScreenSystemLayer error.lua.  ScreenSystemLayer overlay/default.lua restored to previous.  Error messages are now broadcast with the ScriptError message instead of SystemMessage.  Added show/hide error messages toggle and clear error messages to debug menu.  Nuked ScreenConsoleOverlay for being unfinished and duplicating ScreenSystemLayer.  Changed Actor:tween and Tween::CreateFromStack to use ReportScriptError on invalid tween params.  Changed some OptionRowList things to use ReportScriptError on invalid metrics.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -57,7 +57,7 @@ SelectMusicScreen="ScreenSelectMusic"
 
 # Screens that show over everything else.
 # Only mess with this if you know what you're doing.
-OverlayScreens="ScreenSystemLayer,ScreenSyncOverlay,ScreenStatsOverlay,ScreenDebugOverlay,ScreenConsoleOverlay,ScreenInstallOverlay"
+OverlayScreens="ScreenSystemLayer,ScreenSyncOverlay,ScreenStatsOverlay,ScreenDebugOverlay,ScreenInstallOverlay"
 
 # Used in PlayerStageStats for formatting scores.
 PercentScoreDecimalPlaces=2
@@ -1579,16 +1579,6 @@ CreditsP2PlayerJoinedMessageCommand=queuecommand,"UpdateText";
 CreditsP2ScreenChangedMessageCommand=queuecommand,"UpdateVisible";queuecommand,"On"
 CreditsP2OnCommand=horizalign,right;vertalign,bottom;zoom,0.675;shadowlength,1;
 CreditsP2OffCommand=
-
-[ScreenConsoleOverlay]
-Class="ScreenSystemLayer"
-Fallback="ScreenSystemLayer"
-#
-CreditsInitCommand=visible,false;zoom,0
-CreditsP1X=-9999
-CreditsP2X=-9999
-CreditsP1Y=-9999
-CreditsP2Y=-9999
 
 [ScreenInstallOverlay]
 Class="ScreenInstallOverlay"
