Fixes issue #216 : Cannot build with --without-ffmpeg

--- a/bundle/Makefile.am
+++ b/bundle/Makefile.am
@@ -1,8 +1,10 @@
+if !WITHOUT_FFMPEG
 if !SYSTEM_FFMPEG
 all-local:
 	cd ffmpeg && $(MAKE) 
 if WINDOWS
 	cp ffmpeg/*/*.dll ..
+endif
 endif
 
 del-dlls:
