Changed many parts of GameCommand to improve error reporting.  Fixed GameCommand setpref to not set when loading the command.  Minor fix to ScreenOptionsExample.ini to explain that SongInCurrentSongGroup is unusable.  CommonMetrics, CourseContentsList, HoldJudgent, OptionRowHandler all have minor changes to fix crashes on malformed theme data.

--- a/Docs/Themerdocs/Examples/Example_Screens/ScreenOptionsExample.ini
+++ b/Docs/Themerdocs/Examples/Example_Screens/ScreenOptionsExample.ini
@@ -32,7 +32,7 @@ InputMode="individual"
 # LineNames sets the names of the rows on the screen.
 # Names are separated by commas and can be anything that doesn't contain a comma.
 # Each name will be appended to "Line" to find the metric that defines that line.  So a line name of "a" will be defined by the metric "Linea".
-LineNames="a,b,c,d,e,f,g,h,i,j,k,l,m,n"
+LineNames="a,b,c,d,e,f,g,h,j,k,l,m,n"
 
 # Each line is defined by a metric that sets its type and arguments for that type.
 # This example is going to include a simple example of each type.
@@ -71,7 +71,8 @@ Lineg="list,Groups"
 Lineh="list,Difficulties"
 
 # The "SongsInCurrentSongGroup" subtype
-Linei="list,SongsInCurrentSongGroup"
+# This option row type is not actually usable because it requires language file entries for every song, which is impractical.
+#Linei="list,SongsInCurrentSongGroup"
 
 # This is the end of the list subtype examples.
 
@@ -82,8 +83,8 @@ Linej="lua,ArbitrarySpeedMods()"
 # The "steps" row type creates choices for the different charts for the current song.  It takes a single argument, "EditSteps" or "EditSourceSteps".  Its purpose is currently unknown.
 Linek="steps,EditSteps"
 
-# The "stepstype" row type is related to the "steps" row type and takes the same argument.  Its purpose is also unknown.
-Linel="stepstype,EditSteps"
+# The "stepstype" row type is related to the "steps" row type.  It takes a single argument, "EditStepsType" or "EditSourceStepsType".  Its purpose is also unknown.
+Linel="stepstype,EditStepsType"
 
 # The "conf" row type constructs a row for changing a conf option.  conf options are the options in Preferences.ini and the argument is the name of the option to edit.
 Linem="conf,AllowW1"
