Changed ArbitrarySpeedMods to use a large increment that is not forced to be a multiple of the smaller increment.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2938,7 +2938,7 @@ Line3="conf,TimingWindowScale"
 Line4="conf,LifeDifficulty"
 Line8="lua,GamePrefDefaultFail()"
 LineSI="lua,SpeedModIncSize()"
-LineSM="lua,SpeedModIncMultiple()"
+LineSM="lua,SpeedModIncLarge()"
 Line11="conf,AllowW1"
 Line13="conf,HiddenSongs"
 Line14="conf,EasterEggs"
