Fixed two typos.

--- a/Docs/Themerdocs/Examples/Example_Screens/ScreenOptionsExample.ini
+++ b/Docs/Themerdocs/Examples/Example_Screens/ScreenOptionsExample.ini
@@ -1,4 +1,4 @@
-# Try out this examply by copying these metrics into your metrics.ini.
+# Try out this example by copying these metrics into your metrics.ini.
 
 # Some elements will require entries to be added to the language file.  Read Examples/LanguageFile.ini for instructions on adding entries to a language file.
 
