add missing Class attribute for ScreenOptionsEditProfile

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3050,6 +3050,7 @@ PersistScreens="ScreenMiniMenuContext"
 TimerSeconds=-1
 
 [ScreenOptionsEditProfile]
+Class="ScreenOptionsEditProfile"
 PageOnCommand=visible,false
 
 [ScreenReloadSongs]
