add missing nextrow character for options rows

--- a/Themes/_fallback/Fonts/_16px fonts.ini
+++ b/Themes/_fallback/Fonts/_16px fonts.ini
@@ -5,4 +5,4 @@
 # have them pulled in for every 16-pixel font.
 # xxx: we don't have 16px japanese or korean fonts
 [main]
-import=_Thai 16px,_misc 16px,_game chars 16px
+import=_Thai 16px,_misc 16px,_game chars 16px,_ui chars 16px
