Improved three-key support.  Default theme should be completely usable with three-key cabinets if ThreeKeyNavigation pref is true.  Added ThreeKeyNavigation pref.  ScreenOptions:NavigationMode metric now uses that pref to decide between normal and toggle modes.  Added GoToFirstOnStart to OptionRowHandlerLua so an option row can control that behavior.  Rewrote input for default's ScreenSelectProfile to use an input callback to take advantage of menu button mapping.  Fixed inconsistent indentation in ORHL documentation.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2218,7 +2218,7 @@ ScreenBeginCommand=
 [ScreenOptions]
 Fallback="ScreenWithMenuElements"
 
-NavigationMode="normal"
+NavigationMode=OptionsNavigationMode()
 InputMode="individual"
 ForceAllPlayers=false
 #
@@ -3002,12 +3002,13 @@ Line14="conf,ShowSongOptions"
 Fallback="ScreenOptionsServiceChild"
 NextScreen="ScreenOptionsService"
 PrevScreen="ScreenOptionsService"
-LineNames="1,2,3,4,5"
+LineNames="1,2,3,4,5,6"
 Line1="conf,AutoMapOnJoyChange"
 Line2="conf,OnlyDedicatedMenuButtons"
 Line3="conf,DelayedBack"
 Line4="conf,ArcadeOptionsNavigation"
-Line5="conf,MusicWheelSwitchSpeed"
+Line5="conf,ThreeKeyNavigation"
+Line6="conf,MusicWheelSwitchSpeed"
 
 [ScreenOptionsArcade]
 Fallback="ScreenOptionsServiceChild"
