add libglew-dev to list of packages to get will hopefully shut up "configure: error: "No usable version of GLEW found."" msg

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,5 @@ before_script:
     - sudo apt-get install libxtst-dev libxrandr-dev
     - sudo apt-get install libglu1-mesa-dev
     - sudo apt-get install mesa-common-dev
+    - sudo apt-get install libglew-dev
     - ./autogen.sh
