Added CourseSongRewardLives metric to LifeMeterBattery.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -672,6 +672,8 @@ MinesSubtractLives=1
 HeldAddLives=0
 # how many lives an unsuccessful hold will cost you.
 LetGoSubtractLives=1
+# this function returns how many lives to add when a song ends in course mode.
+CourseSongRewardLives=function(life_meter, pn) if GAMESTATE:GetCurrentSteps(pn):GetMeter() >= 8 then return 2 end return 1 end
 
 # How many lives trigger the "Danger" state.
 DangerThreshold=1
