Moved LifeType, DrainType, and BatteryLives from Song Options to Player Options.  Added ScreenGameplay:FailFadeRemovePlayer lua function.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2539,20 +2539,20 @@ Persp,4="mod,hallway;name,Hallway"
 Persp,5="mod,distant;name,Distant"
 
 # Song options
-# LifeType="3;together"
-LifeType=(GAMESTATE:IsCourseMode() and 3 or 2)..";together"
+# LifeType="3"
+LifeType=(GAMESTATE:IsCourseMode() and 3 or 2)..""
 LifeTypeDefault=""
 LifeType,1="mod,bar;name,Bar"
 LifeType,2="mod,battery;name,Battery"
 LifeType,3="mod,lifetime;name,LifeTime"
 #
-BarDrain="3;together"
+BarDrain="3"
 BarDrainDefault=""
 BarDrain,1="mod,normal-drain;name,Normal"
 BarDrain,2="mod,norecover;name,NoRecover"
 BarDrain,3="mod,suddendeath;name,SuddenDeath"
 #
-BatLives="10;together"
+BatLives="10"
 BatLivesDefault=""
 BatLives,1="mod,1 life;name,1"
 BatLives,2="mod,2 lives;name,2"
