Added BackgroundFitMode preference and setting screen for controlling how backgrounds are fitted to the screen.

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1262,7 +1262,7 @@ ExplanationTogetherOffCommand=stoptweening
 [ScreenOptionsService]
 ShowHeader=true
 
-LineNames="Sync,GameType,KeyConfig,TestInput,Input,Reload,Arcade,Appearance,Theme,GraphicSound,Profiles,Network,UI,Advanced,Credits"
+LineNames="Sync,GameType,KeyConfig,TestInput,Input,Reload,Arcade,Appearance,Theme,BGFit,GraphicSound,Profiles,Network,UI,Advanced,Credits"
 LineTheme="gamecommand;screen,ScreenOptionsTheme;name,Theme Options"
 
 # ScreenOptionsSystemDirection"
