Add a real High Scores screen.
(cherry picked from commit 4c5bfa5e0eb351a0d90c70413a7cd8622007d188)

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -39,6 +39,9 @@ CourseDifficultiesToShow="easy,medium,hard"
 # be shown in lights mode! So don't hide it here.
 StepsTypesToHide=""
 
+# Score placeholder for ScreenHighScores
+NoScoreName="STEP"
+
 # The number of entries before "Various" is shown on the BPMDisplay, etc.
 MaxCourseEntriesBeforeShowVarious=10
 
@@ -1496,6 +1499,11 @@ SubtitleOnCommand=
 ArtistOnCommand=visible,false
 ArtistPrependString="/"
 AfterSetCommand=%TextBannerAfterSet
+
+[TextBannerHighScores]
+Fallback="TextBanner"
+AfterSetCommand=%TextBannerHighScoreAfterSet
+
 
 [WheelNotifyIcon]
 ShowTraining=false
@@ -4502,6 +4510,34 @@ AllowStyleTypes="TwoPlayersTwoSides"
 
 MinSecondsToStep=0
 MinSecondsToMusic=0
+
+[ScreenHighScores]
+Fallback="ScreenAttract"
+Class="ScreenHighScores"
+NextScreen="ScreenInit"
+PrevScreen="ScreenDemonstration"
+StartScreen=Branch.TitleMenu()
+
+TimerSeconds=-1
+
+HighScoresType="HighScoresType_AllSteps"
+MaxItemsToShow=50
+NumColumns=5
+ColumnDifficulty1="Difficulty_Beginner"
+ColumnDifficulty2="Difficulty_Easy"
+ColumnDifficulty3="Difficulty_Medium"
+ColumnDifficulty4="Difficulty_Hard"
+ColumnDifficulty5="Difficulty_Challenge"
+ColumnStepsType1=GAMEMAN:GetFirstStepsTypeForGame(GAMESTATE:GetCurrentGame())
+ColumnStepsType2=GAMEMAN:GetFirstStepsTypeForGame(GAMESTATE:GetCurrentGame())
+ColumnStepsType3=GAMEMAN:GetFirstStepsTypeForGame(GAMESTATE:GetCurrentGame())
+ColumnStepsType4=GAMEMAN:GetFirstStepsTypeForGame(GAMESTATE:GetCurrentGame())
+ColumnStepsType5=GAMEMAN:GetFirstStepsTypeForGame(GAMESTATE:GetCurrentGame())
+ScrollerItemsToDraw=7
+ScrollerSecondsPerItem=0.4
+ManualScrolling=false
+ScrollerOnCommand=x,SCREEN_CENTER_X;y,SCREEN_CENTER_Y+36;SetMask,608,40
+ScrollerItemTransformFunction=function(self,offset,itemIndex,numItems) self:y(46.1*offset) end
 
 [ScreenNoise]
 Fallback="ScreenAttract"
