--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -542,6 +542,9 @@ SubtitleOnCommand=horizalign,left;shadowlength,1;
 ArtistOnCommand=horizalign,left;shadowlength,1;skewx,-0.2
 ArtistPrependString=""
 
+[TextBannerHighScore]
+Fallback="TextBanner"
+
 [WheelNotifyIcon]
 
 [Screen]
@@ -1383,6 +1386,22 @@ Line18="list,Characters"
 #
 #
 #
+
+[ScreenHighScores]
+Fallback="ScreenWithMenuElements"
+
+ResetGameState=false
+AttractVolume=true
+
+FOV=90
+
+ScrollerItemsToDraw=9
+ScrollerOnCommand=x,SCREEN_CENTER_X;y,SCREEN_CENTER_Y;SetMask,624,40;draworder,-5
+ScrollerItemTransformFunction=function(self,offset,itemIndex,numItems) \
+	self:y(46 * offset); \
+end;
+
+HelpOnCommand=visible,false
 
 [ScreenRanking]
 #
