Changed LifeMeterTime to not crash when not in course mode.  Changed _fallback's life settings back to forcing together.  Added ForceImmediateFailForBattery theme metric.  Gave up on FailFadeRemovePlayer lua function and removed it.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2540,19 +2540,19 @@ Persp,5="mod,distant;name,Distant"
 
 # Song options
 # LifeType="3"
-LifeType=(GAMESTATE:IsCourseMode() and 3 or 2)..""
+LifeType=(GAMESTATE:IsCourseMode() and 3 or 2)..";together"
 LifeTypeDefault=""
 LifeType,1="mod,bar;name,Bar"
 LifeType,2="mod,battery;name,Battery"
 LifeType,3="mod,lifetime;name,LifeTime"
 #
-BarDrain="3"
+BarDrain="3;together"
 BarDrainDefault=""
 BarDrain,1="mod,normal-drain;name,Normal"
 BarDrain,2="mod,norecover;name,NoRecover"
 BarDrain,3="mod,suddendeath;name,SuddenDeath"
 #
-BatLives="10"
+BatLives="10;together"
 BatLivesDefault=""
 BatLives,1="mod,1 life;name,1"
 BatLives,2="mod,2 lives;name,2"
@@ -3301,6 +3301,7 @@ UnpauseWithStart=true
 InitialBackgroundBrightness=1.0
 SecondsBetweenComments=10.0
 ScoreKeeperClass=ScoreKeeperClass()
+ForceImmediateFailForBattery=true
 TickEarlySeconds=0
 LightsMode="LightsMode_Gameplay"
 SurvivalModOverride=true
