Fix eval summary, summary branches
+ Fixed ScreenGameplay StepsDisplay errors
+ Fixed ScreenSelectCourse CourseContentsList masks
+ Fixed ScreenEvaluationSummary banners -- introduced a scroller.
+ Fixed showing ScreenEvaluationSummary showing after a course

(cherry picked from commit 04f7373238410c481cb79c6441fb27c55c69a447)

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1972,24 +1972,30 @@ Summary=true
 #
 ShowStageDisplay=false
 #
+ShowBannerList=true
+BannerListX=SCREEN_CENTER_X
+BannerListY=SCREEN_TOP+96
+BannerListOnCommmand=
+BannerListOffCommand=
+#
 SmallBanner1X=SCREEN_CENTER_X-72
 SmallBanner1Y=SCREEN_TOP+100-24
-SmallBanner1OnCommand=zoom,0.5
+SmallBanner1OnCommand=visible,false
 SmallBanner1OffCommand=
 
 SmallBanner2X=SCREEN_CENTER_X-48
 SmallBanner2Y=SCREEN_TOP+100-16
-SmallBanner2OnCommand=zoom,0.5
+SmallBanner2OnCommand=visible,false
 SmallBanner2OffCommand=
 
 SmallBanner3X=SCREEN_CENTER_X-24
 SmallBanner3Y=SCREEN_TOP+100-8
-SmallBanner3OnCommand=zoom,0.5
+SmallBanner3OnCommand=visible,false
 SmallBanner3OffCommand=
 
 SmallBanner4X=SCREEN_CENTER_X+24
 SmallBanner4Y=SCREEN_TOP+100+8
-SmallBanner4OnCommand=zoom,0.5
+SmallBanner4OnCommand=visible,false
 SmallBanner4OffCommand=
 
 SmallBanner5X=SCREEN_CENTER_X+48
@@ -1999,7 +2005,7 @@ SmallBanner5OfCommand=
 
 SmallBanner6X=SCREEN_CENTER_X+72
 SmallBanner6Y=SCREEN_TOP+100+24
-SmallBanner6OnCommand=zoom,0.5
+SmallBanner6OnCommand=visible,false
 SmallBanner6OffCommand=
 
 [ScreenNameEntry]
@@ -2009,6 +2015,7 @@ SmallBanner6OffCommand=
 [ScreenProfileSaveSummary]
 
 [ScreenGameOver]
+TimerOnCommand=visible,false
 
 [ScreenPrompt]
 
