remove the ssc part from the Name in stepmania.desktop

--- a/stepmania.desktop
+++ b/stepmania.desktop
@@ -1,7 +1,7 @@
 
 [Desktop Entry]
 Encoding=UTF-8
-Name=Stepmania-ssc
+Name=StepMania
 GenericName=Rhythm and dance game
 TryExec=stepmania
 Exec=stepmania
