--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2105,7 +2105,7 @@ ChangeGroupsWithGameButtons=false
 PreviousGroupButton="MenuUp"
 NextGroupButton="MenuDown"
 #
-TwoPartSelection=false
+TwoPartSelection=TwoPartSelection()
 TwoPartConfirmsOnly=false
 TwoPartTimerSeconds=30
 #
